--- a/js_validator/index.html
+++ b/js_validator/index.html
@@ -13,30 +13,40 @@
     <![endif]-->
   </head>
   <body>
-
+    <div id="bla">
+      
+    </div>
     <div class="container">
       <h1>JS Validator by Marek Boroš</h1>
       <hr />
-      <form action="" role="form">
+      <form action="" role="form" id="firstForm">
         <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" class="form-control" id="name" placeholder="Enter name." onchange="validator(this)">
+          <label for="firstName">First name:</label>
+          <input type="text" class="form-control" name="firstName" placeholder="Enter first name.">
+        </div>
+        <div class="form-group">
+          <label for="lastName">Last name:</label>
+          <input type="text" class="form-control" name="lastName" placeholder="Enter last name.">
+        </div>
+        <div class="form-group">
+          <label for="email">E-mail:</label>
+          <input type="email" class="form-control" name="email" placeholder="Enter email.">
         </div>
         <div class="form-group">
           <label for="pass">Password:</label>
-          <input type="password" class="form-control" id="pwd" placeholder="Enter password." onchange="validator(this)">
+          <input type="password" class="form-control" name="pass" placeholder="Enter password.">
         </div>
         <div class="form-group">  
           <label for="age">Age:</label>
-          <input type="number" class="form-control" id="age" placeholder="Enter your age." onchange="validator(this)">
+          <input type="number" class="form-control" name="age" placeholder="Enter your age.">
         </div>
         <div class="form-group">  
-          <label for="age">Sex:</label>&nbsp;&nbsp;
-          <input type="radio" name="sex" value="male" onchange="validator(this)">&nbsp;Male&nbsp;&nbsp;
-          <input type="radio" name="sex" value="female" onchange="validator(this)">&nbsp;Female<br />
+          <label for="sex">Sex:</label>&nbsp;&nbsp;
+          <input type="radio" name="sex" value="male">&nbsp;Male&nbsp;&nbsp;
+          <input type="radio" name="sex" value="female">&nbsp;Female<br />
         </div>
-        <div class="checkbox">
-          <label><input type="checkbox" onchange="validator(this)"> Is this form?</label>
+        <div class="checkUser">
+          <label><input type="checkbox" name="checkUser"> Are you human?</label>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
