--- a/ness_angular/index.html
+++ b/ness_angular/index.html
@@ -18,16 +18,13 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-4 col-md-3 col-lg-2 left-panel">
-				<h2>Employers</h2>
-				<div class="list-group">
-					<a href class="list-group-item" ng-repeat="(key, user) in users" ng-click="setUser(key)" ng-class="{ active: isSet(key) }">{{ user.firstName + " " + user.lastName }}</a>
-				</div>
+				<user-link></user-link>
 			</div>
 			<div class="col-sm-8 col-md-9 col-lg-10 right-panel">
 
 				<div ui-layout class="layout-mock">
 					<div class="top-panel">
-						<table class="table table-striped table-bordered" ng-show="userSet">
+						<table class="table table-striped table-bordered" ng-if="userSet">
 							<thead>
 								<tr>
 									<th>Dátum</th>
@@ -48,11 +45,11 @@
 							</thead>
 							<tbody>
 								<tr ng-repeat="x in userInfo.attendance">
-									<td>{{ x.date }}</td>
-									<td>{{ x.arrival }}</td>
-									<td>{{ x.departure }}</td>
+									<td>{{ x.date | date:'d.M.yyyy' }}</td>
+									<td>{{ x.arrival | date:'H:mm' }}</td>
+									<td>{{ x.departure | date:'H:mm' }}</td>
 									<td>{{ x.fond }}</td>
-									<td>{{ timeAtWork(x.date, x.arrival, x.departure) | date:'h:mm' }}</td>
+									<td>{{ timeAtWork(x.arrival, x.departure, x.date, x.fond) | date:'H:mm' }}</td>
 									<td><a href ng-click="setUser(userInfo.supervisorId)">{{ users[userInfo.supervisorId].firstName + " " + users[userInfo.supervisorId].lastName }}</a></td>
 								</tr>
 							</tbody>
@@ -69,6 +66,13 @@
 	<script type="text/javascript" src="assets/js/angular.min.js"></script>
 	<script type="text/javascript" src="assets/js/ui-layout.min.js"></script>
 	<script type="text/javascript" src="assets/js/ui-bootstrap.min.js"></script>
+	
+	
+	<!-- Directives -->
+	<script type="text/javascript" src="assets/js/directives/users.js"></script>
+
+	<!-- Services -->
+	<script type="text/javascript" src="assets/js/services/mainService.js"></script>
 
 	<!-- Modules -->
 	<script type="text/javascript" src="assets/js/app.js"></script>
@@ -76,8 +80,7 @@
 	<!-- Controllers -->
 	<script type="text/javascript" src="assets/js/controllers/MainController.js"></script>
 
-	<!-- Directives -->
-	<script type="text/javascript" src="assets/js/directives/user.js"></script>
+	
 
 	</body>
 </html>
