--- a/ness_angular/assets/js/directives/usersList.html
+++ b/ness_angular/assets/js/directives/usersList.html
@@ -1,3 +1,3 @@
 <div class="list-group">
-	<a href class="list-group-item" ng-repeat="(key, user) in users" ng-click="setUser(key)" ng-class="{ active: isSet(key) }">{{ user.firstName + " " + user.lastName }}</a>
+	<a href class="list-group-item" ng-repeat="(key, user) in users" ng-click="setUser(key)" ng-class="{ active: isSet(key) }" ng-bind="user.firstName + ' ' + user.lastName"></a>
 </div>
