--- a/ness_angular/index.html
+++ b/ness_angular/index.html
@@ -58,7 +58,16 @@
 						</table>
 
 					</div>
-					<div class="bottom-panel">bottom</div>
+					<div class="bottom-panel">
+						<div ng-if="userSet">
+							<span>Fond na mesiac: </span>
+							<span ng-bind="userInfo.fondTimeMonth"></span><br />
+							<span>Čas v práci za mesiac: </span>
+							<span ng-bind="userInfo.timeAtWorkMonth"></span><br />
+							<span>Pomer času v práci oproti fondu: </span>
+							<span ng-bind="userInfo.percentTimeAtWork"></span>
+						</div>
+					</div>
 				</div>
 
 			</div>
