--- a/ness_angular/index.html
+++ b/ness_angular/index.html
@@ -17,11 +17,11 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-4 col-md-3 col-lg-2 left-panel">
+			<div class="col-sm-4 col-md-3 col-lg-3 left-panel">
 				<dates-list></dates-list>
 				<users-list></users-list>
 			</div>
-			<div class="col-sm-8 col-md-9 col-lg-10 right-panel">
+			<div class="col-sm-8 col-md-9 col-lg-9 right-panel">
 
 				<div ui-layout class="layout-mock">
 					<div class="top-panel">
@@ -37,21 +37,21 @@
 									<th>Nadriadený</th>
 								</tr>
 								<tr>
-									<td></td>
-									<td></td>
-									<td></td>
-									<td></td>
-									<td></td>
-									<td></td>
+									<td><input type="text" ng-model="filterObject.date"></td>
+									<td><input type="text" ng-model="filterObject.arrival"></td>
+									<td><input type="text" ng-model="filterObject.departure"></td>
+									<td><input type="text" ng-model="filterObject.fond"></td>
+									<td><input type="text" ng-model="filterObject.timeAtWork"></td>
+									<td><input type="text" ng-model="filterObject.supervisorId"></td>
 								</tr>
 							</thead>
 							<tbody>
-								<tr ng-repeat="day in userInfo.attendance">
+								<tr ng-repeat="day in userInfo.attendance | filter : filterObject track by $index">
 									<td ng-bind="day.date | date:'d.M.yyyy'"></td>
 									<td ng-bind="day.arrival | date:'H:mm'"></td>
 									<td ng-bind="day.departure | date:'H:mm'"></td>
 									<td ng-bind="day.fond"></td>
-									<td><span class="glyphicon glyphicon-time" ng-class="day.timeAtWorkFlag" ng-if="day.timeAtWorkFlag"></span> <span ng-bind="day.timeAtWork | date:'H:mm'"></span></td>
+									<td><span class="glyphicon glyphicon-time" ng-class="day.timeAtWorkFlag()" ng-if="day.timeAtWorkFlag()"></span> <span ng-bind="day.timeAtWork() | hoursMinutes"></span></td>
 									<td><a href ng-click="setUser(userInfo.supervisorId)">{{ users[userInfo.supervisorId].firstName + " " + users[userInfo.supervisorId].lastName }}</a></td>
 								</tr>
 							</tbody>
@@ -61,11 +61,11 @@
 					<div class="bottom-panel">
 						<div ng-if="userSet">
 							<span>Fond na mesiac: </span>
-							<span ng-bind="userInfo.fondTimeMonth"></span><br />
+							<span ng-bind="userInfo.fondTimeMonth() | hoursMinutes"></span><br />
 							<span>Čas v práci za mesiac: </span>
-							<span ng-bind="userInfo.timeAtWorkMonth"></span><br />
+							<span ng-bind="userInfo.timeAtWorkMonth() | hoursMinutes"></span><br />
 							<span>Pomer času v práci oproti fondu: </span>
-							<span ng-bind="userInfo.percentTimeAtWork"></span>
+							<span ng-bind="userInfo.percentTimeAtWork() + '%'"></span>
 						</div>
 					</div>
 				</div>
