--- a/ness_angular/index.html
+++ b/ness_angular/index.html
@@ -37,22 +37,22 @@
 									<th>Nadriadený</th>
 								</tr>
 								<tr>
-									<td><input type="text" ng-model="filterObject.date"></td>
-									<td><input type="text" ng-model="filterObject.arrival"></td>
-									<td><input type="text" ng-model="filterObject.departure"></td>
-									<td><input type="text" ng-model="filterObject.fond"></td>
-									<td><input type="text" ng-model="filterObject.timeAtWork"></td>
-									<td><input type="text" ng-model="filterObject.supervisorId"></td>
+									<td><input type="text" ng-model="search.date"></td>
+									<td><input type="text" ng-model="search.arrival"></td>
+									<td><input type="text" ng-model="search.departure"></td>
+									<td><input type="text" ng-model="search.fond"></td>
+									<td><input type="text" ng-model="search.timeAtWork"></td>
+									<td><input type="text" ng-model="search.supervisorName"></td>
 								</tr>
 							</thead>
 							<tbody>
-								<tr ng-repeat="day in userInfo.attendance | filter : filterObject track by $index">
-									<td ng-bind="day.date | date:'d.M.yyyy'"></td>
-									<td ng-bind="day.arrival | date:'H:mm'"></td>
-									<td ng-bind="day.departure | date:'H:mm'"></td>
+								<tr ng-repeat="day in userInfo.attendance | filter : search track by $index">
+									<td ng-bind="day.date | date:'d.M.yyyy' "></td>
+									<td><input type="text" ng-value="day.arrival"  /></td>
+									<td><input type="text" ng-value="day.departure"  /></td>
 									<td ng-bind="day.fond"></td>
-									<td><span class="glyphicon glyphicon-time" ng-class="day.timeAtWorkFlag()" ng-if="day.timeAtWorkFlag()"></span> <span ng-bind="day.timeAtWork() | hoursMinutes"></span></td>
-									<td><a href ng-click="setUser(userInfo.supervisorId)">{{ users[userInfo.supervisorId].firstName + " " + users[userInfo.supervisorId].lastName }}</a></td>
+									<td><span class="glyphicon glyphicon-time" ng-class="day.timeAtWorkFlag" ng-if="day.timeAtWorkFlag"></span> <span ng-bind="day.timeAtWork"></span></td>
+									<td><a href ng-click="setUser(userInfo.supervisorId)" ng-bind="day.supervisorName"></a></td>
 								</tr>
 							</tbody>
 						</table>
@@ -61,11 +61,11 @@
 					<div class="bottom-panel">
 						<div ng-if="userSet">
 							<span>Fond na mesiac: </span>
-							<span ng-bind="userInfo.fondTimeMonth() | hoursMinutes"></span><br />
+							<span ng-bind="userInfo.fondTimeMonth | toHoursMinutes"></span><br />
 							<span>Čas v práci za mesiac: </span>
-							<span ng-bind="userInfo.timeAtWorkMonth() | hoursMinutes"></span><br />
+							<span ng-bind="userInfo.timeAtWorkMonth | toHoursMinutes"></span><br />
 							<span>Pomer času v práci oproti fondu: </span>
-							<span ng-bind="userInfo.percentTimeAtWork() + '%'"></span>
+							<span ng-bind="userInfo.percentTimeAtWork + '%'"></span>
 						</div>
 					</div>
 				</div>
@@ -84,6 +84,8 @@
 	<script type="text/javascript" src="assets/js/directives/usersList.js"></script>
 
 	<script type="text/javascript" src="assets/js/services/mainService.js"></script>
+
+	<script type="text/javascript" src="assets/js/controllers/MainController.js"></script>
 
 	</body>
 </html>
