--- a/ness_angular/assets/js/directives/attendanceTable.html
+++ b/ness_angular/assets/js/directives/attendanceTable.html
@@ -19,12 +19,12 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="day in userInfo.attendance | filter : search track by $index">
-			<td ng-bind="::day.date"></td>
+			<td ng-bind="day.date"></td>
 			<td><input type="text" ng-model="day.arrival" ng-model-options="{ updateOn: 'blur' }" ng-change="updateTime()" /></td>
 			<td><input type="text" ng-model="day.departure" ng-model-options="{ updateOn: 'blur' }" ng-change="updateTime()" /></td>
 			<td ng-bind="day.fond"></td>
 			<td><span class="glyphicon glyphicon-time" ng-class="day.timeAtWorkFlag" ng-if="day.timeAtWorkFlag"></span> <span ng-bind="day.timeAtWork"></span></td>
-			<td><a href ng-click="setUser(userInfo.supervisorId)" ng-bind="day.supervisorName"></a></td>
+			<td><a href ng-click="setUser(day.supervisorId)" ng-bind="day.supervisorName"></a></td>
 		</tr>
 	</tbody>
 </table>
