--- a/ness_angular/index.html
+++ b/ness_angular/index.html
@@ -37,6 +37,7 @@
 
 	<script type="text/javascript" src="assets/js/angular.min.js"></script>
 	<script type="text/javascript" src="assets/js/ui-layout.min.js"></script>
+	<script type="text/javascript" src="assets/js/ui-mask.min.js"></script>
 	<script type="text/javascript" src="assets/js/ui-bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
 
